<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sen Büyürken</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="web_url">www.senbuyurken.com</string>
    <string name="google_login">Google ile Giriş Yap</string>
    <string name="logout">Çıkış</string>


    <!-- Strings related to RegisterActivity -->
    <string name="alert_dialog_yes">Evet</string>
    <string name="alert_dialog_no">Hayır</string>

    <!-- Strings related to RegisterActivity -->
    <string name="register_header">Yeni Hesap</string>

    <string name="eMail">E-Mail Adresi</string>
    <string name="password">Şifre (6 ve üzeri karakter)</string>
    <string name="password2">Şifre Tekrar</string>
    <string name="saveButton">Kaydet</string>
    <string name="cancelButton">Vazgeç</string>


    <!-- Messages-->
    <string name="register_success_msg">Kaydınız başarıyla yapılmıştır.</string>
    <string name="register_fail_msg">Kayıt sırasında hata oluştu.</string>
    <string name="register_existinguser_msg">Kullanıcı sistemde kayıtlıdır.</string>
    <string name="delete_message">Kayıt silinecektir. Emin misiniz ?</string>
    <string name="signout_message">Uygulamadan çıkış yapmak istiyor musunuz ?</string>
    <string name="required_fields">Zorunlu alanları doldurunuz. </string>


    <!-- Diary Entry Page -->

    <string name="diary_entry_text">Unutulmaz \'an\'ları kaçırmayın, hemen not almaya başlayın :)</string>
    <string name="diary_entry_text_length">1024</string>
    <string name="diary_entry_title">Kısa bir başlık...</string>


    <!-- Baby Info Page -->
    <string name="radio_male">Erkek</string>
    <string name="radio_female">Kız</string>
    <string name="baby_name">Adı</string>
    <string name="baby_surname">Soyadı</string>
    <string name="baby_gender">Cinsiyet</string>
    <string name="birthDate">Doğum Tarihi</string>
    <string name="birthHour">Doğum Saati</string>
    <string name="birthWeight">Doğum Kilosu (gr)</string>
    <string name="birthLength">Doğum Boyu (cm)</string>
    <string name="birthPlace">Doğum Yeri</string>
    <string name="hospital">Hastane</string>
    <string name="gynecologyDoctor">Kadın Doğum Doktoru</string>
    <string name="pediatricianDoctor">Çocuk Doktoru</string>


    <!-- Parent Info Page -->
    <string name="mother_name">Anne Adı</string>
    <string name="mother_surname">Anne Soyadı</string>
    <string name="father_name">Baba Adı</string>
    <string name="father_surname">Baba Soyadı</string>
    <string name="wedding_anniversary">Evlilik Tarihi</string>
    <string name="photo_upload">Fotoğraf Yükle</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Giriş</string>
    <string name="prompt_email">Email Adresi</string>
    <string name="prompt_password">Şifre</string>
    <string name="action_sign_in">Giriş</string>
    <string name="action_sign_in_short">Giriş</string>
    <string name="action_sign_out">Çıkış Yap</string>
    <string name="action_sign_out_short">Çıkış</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="new_registration">Yeni Hesap</string>
    <string name="forget_pass">Şifremi Unuttum</string>
    <string name="show_pass">Şifreyi Göster</string>
    <string name="title_activity_launcher">Sen Büyürken</string>
    <string name="title_activity_diary_entry">Yeni Not</string>
    <string name="diary_enty_new_entry">Yeni Not</string>
    <string name="title_activity_diary_page">Notlarım</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_activity_baby_parent_info">Profil</string>
    <string name="title_activity_app_info">Hakkında</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>


    <string-array name="menu">
        <item>Notlarım</item>
        <item>Bebek Bilgileri</item>
        <item>Ebeveyn Bilgileri</item>
        <item>Hakkında</item>
    </string-array>


    <string-array name="menu_images">
        <item>ic_drawer_notes</item>
        <item>ic_drawer_baby_info</item>
        <item>ic_drawer_parents</item>
        <item>ic_drawer_about</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>


</resources>
