<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/baby_info_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sam.senbuyurkenmobile.BabyInfoActivity">

    <ScrollView
        android:id="@+id/baby_info_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:fillViewport="false"
        android:padding="10dp">

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:showDividers="none">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center_horizontal"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <ImageButton
                    android:id="@+id/gender_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/boy" />

                <ImageButton
                    android:id="@+id/gender_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:src="@drawable/girl" />

            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/baby_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/baby_name" />

                <TextView
                    android:id="@+id/baby_surname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/baby_surname" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="@dimen/abc_text_size_small_material" />

                <EditText
                    android:id="@+id/surname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:textSize="@dimen/abc_text_size_small_material" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/baby_birthDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birthDate" />

                <TextView
                    android:id="@+id/baby_birthHour"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birthHour" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/birthDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusableInTouchMode="false"
                    android:inputType="date"
                    android:textSize="@dimen/abc_text_size_small_material" />

                <EditText
                    android:id="@+id/birthHour"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusableInTouchMode="false"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/abc_text_size_small_material" />

            </TableRow>


            <TableRow android:gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birthWeight" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birthLength" />
            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/birthWeight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:maxLength="4"
                    android:textSize="@dimen/abc_text_size_small_material" />

                <EditText
                    android:id="@+id/birthLength"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:digits="0123456789"
                    android:inputType="numberDecimal"
                    android:maxLength="2"
                    android:textSize="@dimen/abc_text_size_small_material" />
            </TableRow>


            <TableRow android:gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birthPlace" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hospital" />

            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/birthPlace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/abc_text_size_small_material" />

                <EditText
                    android:id="@+id/hospital"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/abc_text_size_small_material" />

            </TableRow>


            <TableRow android:gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/gynecologyDoctor" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pediatricianDoctor" />

            </TableRow>

            <TableRow android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/gynecologyDoctor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/abc_text_size_small_material" />

                <EditText
                    android:id="@+id/pediatricianDoctor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textPersonName"
                    android:textSize="@dimen/abc_text_size_small_material" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/babyInfoSaveButton"
                    style="@style/myButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/my_rounded_button"
                    android:text="@string/saveButton"
                    android:textColor="#FFFFFF" />
            </TableRow>

        </TableLayout>

    </ScrollView>

</RelativeLayout>
